# data-da-ds-de

./: README.md  basic_data_validation.py  constants.py  data_validation_note.txt  lhub_data_validation_config.xlsx  main.py  pyproject.toml  requirements.txt
.github/workflows/: cd.yaml  ci.yaml  docker.yaml
configs/: source.yaml
data_validation/: __init__.py  basic_data_validation.py  check_correct_datetime_format.py  check_in_range_datetime.py  check_in_range_numeric.py  check_in_range_string_length.py  check_mandatory.py  check_numeric.py
data_validation/helpers/: check_in_range_numeric.py  check_int.py  check_mandatory.py  is_empty.py  write_data_to_excel_file.py
data_validation/utils/: constant.py
data_validation_pandas/: basic_data_validation.py  data_validation_note.txt  main.py
data_validation_pandas/helpers/: __init__.py  check_correct_datetime_format.py  check_in_range_datetime.py  check_in_range_numeric.py  check_in_range_string_length.py  check_in_value_list.py  check_int.py  check_mandatory.py  check_numeric.py  check_unique.py  is_empty.py  summarize_result.py  validation_wrapper.py  write_data_to_excel_file.py
data_validation_pandas/labs/: 1_data_validation.ipynb  chatgpt_data_validation.ipynb  claude_config_yaml_example.yaml  claude_data_validation.ipynb  common.ipynb  cross_validation.ipynb  data_validatiob_base_on_error.ipynb  data_validation_base_on_dtype.ipynb  data_validation_with_pydantic.ipynb  facade_pattern.ipynb  gemini_data_validation.ipynb  pre_processing_config.yml  process_config_excel_file.ipynb  read_data.ipynb  read_yaml_file.ipynb
data_validation_polars/: requirements.txt
docker/: .dockerignore  docker-compose.yml  dockerfile
helpers/: __init__.py  write_data_to_excel_file.py
lab/: 0_data_pre_processing.ipynb  2_data_processing.ipynb  check_config_data>source.ipynb  check_page_work_or_not.ipynb  check_system_info.ipynb  data_source_checking.ipynb  random_sort_df.ipynb  read_multiple_file_at_the_same_time.ipynb
prj_1_mrdp/: README.md  main.py  requirements.txt
utils/: __init__.py  check_source_status.py  connect_db.py  constant.py  create_io_entry.py  logger.py  logger_wrapper.py
(+123 files in other folders)
