[project]
name = "prj_1_mrdp"
version = "0.1.0"
description = "Project 01: My raw data pipeline. Bulid a simple data pipeline from scratch using python, pandas, sqlite. Using loguru for logging and debugging; selenium for crawling data."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "openpyxl",
    "python-calamine",
    "loguru",
    "snoop",
    "matplotlib",
    "snakeviz",
    "selenium",
    "lxml",
    "scrapy",
    "html5lib",
    "beautifulsoup4",
    "pytz",
    "fastexcel>=0.20.2",
    "polars>=1.42.1",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
    "pydantic>=2.13.4",
    "pandera>=0.32.1",
]
